@@ -1,5 +1,5 @@
 
-	SubC Compiler, Version 2016-02-16
+	SubC Compiler, Version 2016-02-17
 	By Nils M Holm, 2011--2016
 	Placed in the public domain
 
@@ -217,6 +217,8 @@
 	o  The ctime() function ignores the time zone.
 
 	o  The varargs mechanism is slightly incompatible.
+
+	o  The SubC compiler accepts // comments in addition to /* */.
 
 
 	SELECTING A TARGET PLATFORM
