@@ -1,3 +1,4 @@
+2016-02-17 Patch: added // comments. Thanks again, Steve!
 2016-02-16 Fix: Darwin back-end emitted wrong asm code. Thanks, Steve Ward!
 2016-02-16 Fix: SubC would miscompile x<256;x=0; (crash). Thanks, Quan Tran!
 2016-02-16 Fix: freopen() had a precedence error. (also by Quan Tran)
